--- a/static/Data/season_data.json
+++ b/static/Data/season_data.json
@@ -5,7 +5,7 @@
     "rating": "7.0",
     "Year": "1989",
     "Episodes": 13,
-    "Overview": "Season 1 of The Simpsons premiered on December 17, 1989."
+    "Overview": "The Simpsons family debuted, with 'Bart the General' and 'Life on the Fast Lane' among early gems, setting the stage for iconic humor in Springfield."
   },
   {
     "Season": 2,
@@ -13,7 +13,7 @@
     "rating": "7.4",
     "Year": "1990",
     "Episodes": 22,
-    "Overview": "Season 2 of The Simpsons premiered on October 11, 1990."
+    "Overview": "This season shone with classics 'Lisa's Substitute' and 'Homer vs. Lisa and the 8th Commandment,' combining heartwarming moments with sharp satire."
   },
   {
     "Season": 3,
@@ -21,7 +21,7 @@
     "rating": "7.4",
     "Year": "1991",
     "Episodes": 24,
-    "Overview": "Season 3 of The Simpsons premiered on September 19, 1991."
+    "Overview": "'Flaming Moe's' and 'Homer at the Bat' showcased the show's evolving depth and humor while introducing memorable characters."
   },
   {
     "Season": 4,
@@ -29,7 +29,7 @@
     "rating": "7.5",
     "Year": "1992",
     "Episodes": 22,
-    "Overview": "Season 4 of The Simpsons premiered on September 24, 1992."
+    "Overview": "The season delivered excellence with 'Last Exit to Springfield' and 'Marge vs. the Monorail,' cementing The Simpsons' legacy."
   },
   {
     "Season": 5,
@@ -37,7 +37,7 @@
     "rating": "7.5",
     "Year": "1993",
     "Episodes": 22,
-    "Overview": "Season 5 of The Simpsons premiered on September 30, 1993."
+    "Overview": "Highlighting 'Cape Feare' and 'Homer's Barbershop Quartet,' this season reached new heights in creativity and comedic genius."
   },
   {
     "Season": 6,
@@ -45,7 +45,7 @@
     "rating": "7.4",
     "Year": "1994",
     "Episodes": 25,
-    "Overview": "Season 6 of The Simpsons premiered on September  4, 1994."
+    "Overview": "'Treehouse of Horror V' and 'Homer Badman' exemplified the continued brilliance of The Simpsons' humor and satire."
   },
   {
     "Season": 7,
@@ -53,7 +53,7 @@
     "rating": "7.5",
     "Year": "1995",
     "Episodes": 25,
-    "Overview": "Season 7 of The Simpsons premiered on September 17, 1995."
+    "Overview": "The season featured gems 'Marge Be Not Proud' and '22 Short Films About Springfield,' showcasing the show's enduring charm."
   },
   {
     "Season": 8,
@@ -61,7 +61,7 @@
     "rating": "7.5",
     "Year": "1996",
     "Episodes": 25,
-    "Overview": "Season 8 of The Simpsons premiered on October 27, 1996."
+    "Overview": "'You Only Move Twice' and 'Homer's Phobia' stood out, blending humor and societal commentary seamlessly."
   },
   {
     "Season": 9,
@@ -69,7 +69,7 @@
     "rating": "7.0",
     "Year": "1997",
     "Episodes": 25,
-    "Overview": "Season 9 of The Simpsons premiered on September 21, 1997."
+    "Overview": "Episodes 'The City of New York vs. Homer Simpson' and 'Trash of the Titans' kept the laughs coming while addressing pertinent issues."
   },
   {
     "Season": 10,
@@ -77,7 +77,7 @@
     "rating": "6.8",
     "Year": "1998",
     "Episodes": 23,
-    "Overview": "Season 10 of The Simpsons premiered on August 23, 1998."
+    "Overview": "'Lisa Gets an 'A'' and 'Homer to the Max' maintained the show's high standard of humor and wit."
   },
   {
     "Season": 11,
@@ -85,7 +85,7 @@
     "rating": "6.5",
     "Year": "1999",
     "Episodes": 22,
-    "Overview": "Season 11 of The Simpsons premiered on September 26, 1999."
+    "Overview": "This season offered gems 'Behind the Laughter' and 'Treehouse of Horror X,' showcasing a blend of meta-humor and classic parody."
   },
   {
     "Season": 12,
@@ -93,7 +93,7 @@
     "rating": "6.6",
     "Year": "2000",
     "Episodes": 21,
-    "Overview": "Season 12 of The Simpsons premiered on November  1, 2000."
+    "Overview": "'Trilogy of Error' and 'Skinner's Sense of Snow' were highlights, demonstrating The Simpsons' enduring appeal and creativity."
   },
   {
     "Season": 13,
@@ -101,7 +101,7 @@
     "rating": "6.1",
     "Year": "2001",
     "Episodes": 22,
-    "Overview": "Season 13 of The Simpsons premiered on November  6, 2001."
+    "Overview": "Episodes 'The Parent Rap' and 'Sweets and Sour Marge' showcased the show's continued ability to entertain and comment on contemporary issues."
   },
   {
     "Season": 14,
@@ -109,7 +109,7 @@
     "rating": "6.3",
     "Year": "2002",
     "Episodes": 22,
-    "Overview": "Season 14 of The Simpsons premiered on November  3, 2002."
+    "Overview": "Season 14 featured 'How I Spent My Strummer Vacation' and 'The Great Louse Detective,' maintaining The Simpsons' comedic brilliance."
   },
   {
     "Season": 15,
@@ -117,7 +117,7 @@
     "rating": "6.3",
     "Year": "2003",
     "Episodes": 22,
-    "Overview": "Season 15 of The Simpsons premiered on November  2, 2003."
+    "Overview": "'My Mother the Carjacker' and 'The President Wore Pearls' exemplified the show's ability to tackle diverse themes with humor."
   },
   {
     "Season": 16,
@@ -125,7 +125,7 @@
     "rating": "6.0",
     "Year": "2004",
     "Episodes": 21,
-    "Overview": "Season 16 of The Simpsons premiered on November  7, 2004."
+    "Overview": "Episodes like 'Future-Drama' and 'The Father, the Son, and the Holy Guest Star' continued the series' tradition of fresh and hilarious storytelling."
   },
   {
     "Season": 17,
@@ -133,7 +133,7 @@
     "rating": "6.1",
     "Year": "2005",
     "Episodes": 22,
-    "Overview": "Season 17 of The Simpsons premiered on September 11, 2005."
+    "Overview": "'Seemingly Never-Ending Story' and 'Homer's Paternity Coot' highlighted the season's enduring comedic legacy."
   },
   {
     "Season": 18,
@@ -141,7 +141,7 @@
     "rating": "5.8",
     "Year": "2006",
     "Episodes": 22,
-    "Overview": "Season 18 of The Simpsons premiered on September 10, 2006."
+    "Overview": "'24 Minutes' and 'Homerazzi' showcased the show's ability to adapt to contemporary issues while delivering laughs."
   },
   {
     "Season": 19,
@@ -149,7 +149,7 @@
     "rating": "6.0",
     "Year": "2007",
     "Episodes": 20,
-    "Overview": "Season 19 of The Simpsons premiered on September 23, 2007."
+    "Overview": "This season entertained with 'The Debarted' and 'Eternal Moonshine of the Simpson Mind,' maintaining The Simpsons' timelessness."
   },
   {
     "Season": 20,
@@ -157,7 +157,7 @@
     "rating": "6.2",
     "Year": "2008",
     "Episodes": 21,
-    "Overview": "Season 20 of The Simpsons premiered on September 28, 2008."
+    "Overview": "The season included The Simpsons Movie and 'Take My Life, Please,' combining classic humor with modern storytelling."
   },
   {
     "Season": 21,
@@ -165,7 +165,7 @@
     "rating": "6.0",
     "Year": "2009",
     "Episodes": 23,
-    "Overview": "Season 21 of The Simpsons premiered on September 27, 2009."
+    "Overview": "Episodes like 'The Great Wife Hope' and 'Stealing First Base' kept fans engaged and amused, demonstrating the show's continued appeal."
   },
   {
     "Season": 22,
@@ -173,7 +173,7 @@
     "rating": "6.1",
     "Year": "2010",
     "Episodes": 22,
-    "Overview": "Season 22 of The Simpsons premiered on September 26, 2010."
+    "Overview": "This season featured 'Homer the Father' and 'The Ned-Liest Catch,' continuing The Simpsons' tradition of clever humor."
   },
   {
     "Season": 23,
@@ -181,7 +181,7 @@
     "rating": "6.0",
     "Year": "2011",
     "Episodes": 22,
-    "Overview": "Season 23 of The Simpsons premiered on September 25, 2011."
+    "Overview": "'Treehouse of Horror XXII' and 'The Food Wife' showcased The Simpsons' ability to blend humor and satire effectively."
   },
   {
     "Season": 24,
@@ -189,7 +189,7 @@
     "rating": "6.0",
     "Year": "2012",
     "Episodes": 22,
-    "Overview": "Season 24 of The Simpsons premiered on September 30, 2012."
+    "Overview": "Homer became a superhero in 'Dark Knight Court,' and 'To Cur with Love' offered classic humor, ensuring The Simpsons' laughter lived on."
   },
   {
     "Season": 25,
@@ -197,78 +197,78 @@
     "rating": "6.2",
     "Year": "2013",
     "Episodes": 22,
-    "Overview": "Season 25 of The Simpsons premiered on September 29, 2013."
+    "Overview": "'Brick Like Me' and 'Treehouse of Horror XXIV' highlighted the show's wit and relevance, maintaining its iconic status."
   },
   {
     "Season": 26,
     "Poster": "https://www.themoviedb.org/t/p/w130_and_h195_bestv2/9bGpb3vWygBogXpQBnTodFWaQte.jpg",
-    "rating": "6.1",
+    "rating": "6.3",
     "Year": "2014",
     "Episodes": 22,
-    "Overview": "Season 26 of The Simpsons premiered on September 28, 2014."
+    "Overview": "Episodes like Clown in the Dumps and The Musk Who Fell to Earth continued the tradition of fresh humor and social commentary."
   },
   {
     "Season": 27,
     "Poster": "https://www.themoviedb.org/t/p/w130_and_h195_bestv2/aw26dkO0PnxD0EfYWXCMUQLFNbI.jpg",
-    "rating": "6.1",
+    "rating": "6.4",
     "Year": "2015",
     "Episodes": 22,
-    "Overview": "Season 27 of The Simpsons premiered on September 27, 2015."
+    "Overview": "This season entertained with Halloween of Horror and Simprovised showcasing The Simpsons' ongoing creativity."
   },
   {
     "Season": 28,
     "Poster": "https://www.themoviedb.org/t/p/w130_and_h195_bestv2/j4GZ2oH5PEWEyZkwuZ41OYLb30W.jpg",
-    "rating": "5.8",
+    "rating": "6.4",
     "Year": "2016",
     "Episodes": 22,
-    "Overview": "Season 28 of The Simpsons premiered on September 25, 2016."
+    "Overview": "Episodes like Friends and Family and The Town delighted fans, emphasizing the show's enduring appeal."
   },
   {
     "Season": 29,
     "Poster": "https://www.themoviedb.org/t/p/w130_and_h195_bestv2/f5W9ipu1GvLwchYRRu9OE9MrpAk.jpg",
-    "rating": "5.8",
+    "rating": "6.4",
     "Year": "2017",
     "Episodes": 21,
-    "Overview": "Season 29 of The Simpsons premiered on October  1, 2017."
+    "Overview": "The Serfsons and Left Behind demonstrated The Simpsons' ability to adapt and innovate while delivering laughs."
   },
   {
     "Season": 30,
     "Poster": "https://www.themoviedb.org/t/p/w130_and_h195_bestv2/2uCMfNKU5jQiWV2Js519Eg4lUqQ.jpg",
-    "rating": "5.7",
+    "rating": "6.4",
     "Year": "2018",
     "Episodes": 23,
-    "Overview": "Season 30 of The Simpsons premiered on September 30, 2018."
+    "Overview": "With episodes like Thanksgiving of Horror and The Hateful Eight-Year-Olds The Simpsons combined humor with contemporary relevance."
   },
   {
     "Season": 31,
     "Poster": "https://www.themoviedb.org/t/p/w130_and_h195_bestv2/1y2zzQhnAuFpRNovNMHWlubOaxw.jpg",
-    "rating": "5.3",
+    "rating": "6.3",
     "Year": "2019",
     "Episodes": 22,
-    "Overview": "Season 31 of The Simpsons premiered on September 29, 2019."
+    "Overview": "Thanksgiving of Horror and The Hateful Eight-Year-Olds maintained the show's tradition of laughter and commentary."
   },
   {
     "Season": 32,
     "Poster": "https://www.themoviedb.org/t/p/w130_and_h195_bestv2/ifvEta1mmPGLu3E6lFnPSJAyBhh.jpg",
-    "rating": "5.5",
+    "rating": "6.7",
     "Year": "2020",
     "Episodes": 22,
-    "Overview": "Season 32 of The Simpsons premiered on September 27, 2020."
+    "Overview": "Episodes like Undercover Burns and 'Mother and Child Reunion continued The Simpsons' charm and ability to entertain audiences."
   },
-  {
+    {
     "Season": 33,
     "Poster": "https://www.themoviedb.org/t/p/w130_and_h195_bestv2/tubgEpjTUA7t0kejVMBsNBZDarZ.jpg",
     "rating": "5.0",
     "Year": "2021",
     "Episodes": 22,
-    "Overview": "Season 33 of The Simpsons premiered on September 26, 2021."
+    "Overview": "In this season humor and satire in Springfield. Marge's beauty contest and Bart's time travel journey entertain and comment on modern life."
   },
-  {
+    {
     "Season": 34,
     "Poster": "https://www.themoviedb.org/t/p/w130_and_h195_bestv2/zI3E2a3WYma5w8emI35mgq5Iurx.jpg",
     "rating": "6.0",
     "Year": "2022",
     "Episodes": 22,
-    "Overview": "Season 34 of The Simpsons premiered on September 25, 2022."
+    "Overview": "This season blends humor and insight. Homer's prison escapades and Lisa's ethical dilemmas navigate pop culture and society's quirks."
   }
-]
+  ]
