--- a/static/data/season_data.json
+++ b/static/data/season_data.json
@@ -270,5 +270,13 @@
     "Year": "2022",
     "Episodes": 22,
     "Overview": "This season blends humor and insight. Homer's prison escapades and Lisa's ethical dilemmas navigate pop culture and society's quirks."
+  },
+      {
+    "Season": 35,
+    "Poster": "https://www.themoviedb.org/t/p/w130_and_h195_bestv2/vHqeLzYl3dEAutojCO26g0LIkom.jpg",
+    "rating": "TBD",
+    "Year": "2023",
+    "Episodes": 1,
+    "Overview": "TBD"
   }
   ]
