--- a/static/data/season_data.json
+++ b/static/data/season_data.json
@@ -274,9 +274,9 @@
       {
     "Season": 35,
     "Poster": "https://www.themoviedb.org/t/p/w130_and_h195_bestv2/vHqeLzYl3dEAutojCO26g0LIkom.jpg",
-    "rating": "TBD",
+    "rating": "8.2",
     "Year": "2023",
-    "Episodes": 1,
+    "Episodes": 2,
     "Overview": "TBD"
   }
   ]
